TestSuite/Verification/Error/Serial/Data-Management/out/MainAllocationTest.cxx
/*********************************************************************/
/*        This is a generated C++ source file.                       */
/*        Generated by PatternDSL.                                   */
/*********************************************************************/

#include <vector>
#include <cstdint>
#include <string>
#include <limits>
#include <iostream>
#include "includes/Patternlib.hxx"
#include "includes/PThreadsLib.hxx"
#include "includes/MainAllocationTest.hxx"
#include "includes/cuda_lib_MainAllocationTest.hxx"
#include "mpi.h"
#include "includes/cuda_pool_lib.hxx"
#include "math.h"







/*********************************************************************/
/*        Global Variables                                           */
/*        Generated by PatternDSL .                                  */
/*********************************************************************/



/*********************************************************************/
/*        Function Declarations                                      */
/*        Generated by PatternDSL.                                   */
/*********************************************************************/



int main(int argc, char** argv) {

	int32_t a_qC3fMhUtWl;
	int32_t* b_iS2J5lXty9;
	int32_t* c_rf29MjBNpH;
	int32_t* d_TOSh1JHX4c;
	int NUM_CORES;
	int NUM_GPUS;

	int rank, nprocs;
	MPI_Status Stat;
	MPI_Init(&argc, &argv);
	MPI_Comm_size(MPI_COMM_WORLD, &nprocs);
	MPI_Comm_rank(MPI_COMM_WORLD, &rank);
	if (rank == 0 ) {
		NUM_CORES = 48;
		NUM_GPUS = 2;
	} else 	if (rank == 1 ) {
		NUM_CORES = 48;
		NUM_GPUS = 2;
	}
	std::vector<Thread> pool(NUM_CORES);
	setPool(&pool);
	std::vector<Thread> gpu_pool(NUM_GPUS);
	setGPUPool(&gpu_pool);
	startExecution();
	startGPUExecution();
	if (rank == 0) {
		a_qC3fMhUtWl = 0;
	}
	b_iS2J5lXty9 = Init_List(b_iS2J5lXty9, 10LL * 1LL);
	if (rank == 0) {
		int32_t B[] = {1, 2, 3, 4, 5, 6, 7, 8, 9, 0 };
	}
	c_rf29MjBNpH = Init_List(c_rf29MjBNpH, 10LL * 9LL * 1LL);
	if (rank == 0) {
		int32_t C[] = {1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 };
	}
	d_TOSh1JHX4c = Init_List(d_TOSh1JHX4c, 10LL * 9LL * 8LL * 1LL);
	if (rank == 0) {
		int32_t D[] = {1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 };
	}
	finishExecution();
	finishGPUExecution();
	std::free(b_iS2J5lXty9);
	std::free(c_rf29MjBNpH);
	std::free(d_TOSh1JHX4c);
	MPI_Finalize();
	return 0;


}

